<resources>
    <string name="app_name">Secure Note</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_note">Add Note</string>
    <string name="title_edit_note">Edit Note</string>

    <string name="date_format">MM/dd/yyyy HH:mm:ss</string>

    <!-- General -->
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <!-- Login -->
    <string name="password">Password</string>
    <string name="yes">Are you sure?</string>
    <string name="note_save_error">Can\'t save an empty note</string>

    <string name="loading">Loading Json…</string>
    <string name="notes_imported_correctly">Notes were imported correctly</string>
    <string name="view_all">View All</string>
    <string name="notes_imported_error">Notes couldn\'t be imported</string>
    <string name="retry">Retry</string>

    <!-- Note Delete Confirmation -->
    <string name="note_delete_dialog_title">Delete Note</string>
    <string name="note_delete_dialog_message">Do you really want to delete this note?</string>
    <string name="confirm">Confirm</string>
    <string name="login_info">To safeguard your privacy and access your confidential notes, please enter your password.\n\nThis ensures only you have access, providing peace of mind and a secure digital space for your notes.</string>
    <string name="message_placeholder">Write your note here…</string>
    <string name="title_placeholder">Add title</string>
    <string name="message_label">Note</string>
    <string name="title_label">Title</string>
    <string name="change_password">Change password</string>
    <string name="enable_biometrics">Enable Biometrics</string>
    <string name="button_add_note">Add Note</string>
    <string name="other_features">Other Features</string>
    <string name="account">Account</string>
    <string name="load_from_json_file">Load from JSON file</string>
    <string name="please_install_a_file_manager">Please install a File Manager.</string>
    <string name="select_a_file_to_upload">Select a File to Upload</string>
    <string name="notes_empty_message">Looks like you do not have notes yet. Don\'t worry it\'s never too late</string>

</resources>