<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.asct94.securenote.presentation.notes.add_edit.NoteAddEditViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundColor="@{viewModel.color}"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/spacing">

                <com.asct94.securenote.presentation.utils.ColorSelector
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:colors="@{viewModel.colorList}"
                    app:selectedColor="@={viewModel.color}"
                    tools:background="#ff00000"
                    tools:minHeight="50dp" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing"
                    android:background="@android:color/transparent"
                    android:hint="@string/title_placeholder"
                    android:text="@={viewModel.title}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />

                <EditText
                    android:id="@+id/et_message"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/spacing"
                    android:background="@android:color/transparent"
                    android:gravity="top"
                    android:hint="@string/message_placeholder"
                    android:text="@={viewModel.message}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing"
            android:text="@string/save"
            app:backgroundTint="@color/white"
            app:icon="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>